<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>edu.hcmus.doc.main-service</groupId>
    <artifactId>doc-main-service-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>

  <artifactId>doc-main-service-web</artifactId>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <typescript-generator.version>3.1.1185</typescript-generator.version>
    <typescript-generator.outputFile>../../doc-front/src/models/doc-main-models.ts</typescript-generator.outputFile>

    <!--    Flags   -->
    <skipTypescriptGenerator>false</skipTypescriptGenerator>
  </properties>

  <dependencies>
    <dependency>
      <groupId>edu.hcmus.doc.main-service</groupId>
      <artifactId>doc-main-service-service</artifactId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>edu.hcmus.doc.main-service</groupId>
      <artifactId>doc-main-service-common</artifactId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>cz.habarta.typescript-generator</groupId>
        <artifactId>typescript-generator-maven-plugin</artifactId>
        <version>${typescript-generator.version}</version>
        <executions>
          <execution>
            <id>generate</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <phase>process-classes</phase>
          </execution>
        </executions>
        <configuration>
          <jsonLibrary>jackson2</jsonLibrary>
          <classPatterns>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DistributionOrganizationDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.IncomingDocument.IncomingDocumentPutDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.IncomingDocument.IncomingDocumentPostDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.IncomingDocument.IncomingDocumentGetDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.IncomingDocument.IncomingDocumentDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.IncomingDocument.TransferDocumentModalSettingDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.OutgoingDocument.OutgoingDocumentGetDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.OutgoingDocument.OutgoingDocumentPostDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.OutgoingDocument.OutgoingDocumentPutDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.OutgoingDocument.PublishDocumentDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.TransferDocument.GetTransferDocumentDetailRequest</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.TransferDocument.GetTransferDocumentDetailResponse</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.TransferDocument.ValidateTransferDocDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.TransferDocument.TransferDocDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.enums.Urgency</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.enums.Confidentiality</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.enums.ProcessMethod</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.enums.TransferDocumentType</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.enums.TransferDocumentComponent</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.FolderDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DocAbstractDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DocPaginationDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DocumentTypeDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.SendingLevelDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.UserDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.SearchCriteriaDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DocumentReminderDetailsDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.UserDepartmentDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.CommentDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DepartmentDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.UserSearchCriteria</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.ProcessingUserDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.ProcessingDetailsDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DocumentTypeSearchCriteria</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.DepartmentSearchCriteria</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.TruongPhongDto</classPattern>
            <classPattern>edu.hcmus.doc.mainservice.model.dto.OutgoingDocSearchCriteriaDto</classPattern>
          </classPatterns>
          <excludeClasses>
            <class>java.io.Serializable</class>
          </excludeClasses>
          <optionalAnnotations>
            <annotation>org.springframework.lang.Nullable</annotation>
          </optionalAnnotations>
          <mapEnum>asEnum</mapEnum>
          <mapDate>asString</mapDate>
          <outputKind>module</outputKind>
          <outputFileType>implementationFile</outputFileType>
          <outputFile>${typescript-generator.outputFile}</outputFile>
          <skip>${skipTypescriptGenerator}</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>


</project>
